# talker_bot

./: Dockerfile  config.template.ini  docker-compose.yaml  pyproject.toml  test_bot.py
locales/en/LC_MESSAGES/: messages.po
locales/ru/LC_MESSAGES/: messages.po
src/: config.ini  polite_bot.py
src/locales/en/LC_MESSAGES/: messages.po
src/locales/ru/LC_MESSAGES/: messages.po
src/polite_bot/: bot_loger.py  cb_data.py  config.py  keyboards.py  middleware.py  services.py  states.py  texts.py  utils.py
src/polite_bot/routers/: inline_templates.py  phrase_settings.py
tests/: test_repo.py
